# gamma

./: CMakeLists.txt  README.md
src/: batch_lib.c  batch_lib.h  drawing_lib.c  drawing_lib.h  game_lib.c  game_lib.h  gamma.c  gamma.h  gamma_game.c  gamma_lib.c  gamma_lib.h  gamma_test.c  interactive_lib.c  interactive_lib.h  player_lib.c  player_lib.h  util.c  util.h
